css/style.css
:root {
    --dark-blue: #131217;
    --off-white: #dadada;
    --sonic-blue: #6e99c4;
}

* {
    box-sizing: border-box;
    scroll-padding-top: 4.5rem;
    margin: 0;
    padding: 0;
    background-color: var(--dark-blue);
    scroll-behavior: smooth;
    font-family: 'Satoshi-Variable', sans-serif;
}

.align-items-flex-start {
    align-items: flex-start;
}

.align-items-center {
    align-items: center;
}

.align-items-flex-end {
    align-items: flex-end;
}

h3,
li,
a,
.wrapper p,
.project-description,
.quotation {
    font-weight: 400;
}

.block-size-auto {
    block-size: auto;
}

.float-left-img {
    float: left;
}

.flex {
    display: flex;
}

.flex-direction-column {
    flex-direction: column;
}

.flex-not-wrapped {
    flex-wrap: nowrap;
}

.flex-wrapped {
    flex-wrap: wrap;
}

.font-style-italic {
    font-style: italic;
}

.height-auto {
    height: auto;
}

.justify-content-flex-start {
    justify-content: flex-start;
}

.justify-content-flex-end {
    justify-content: flex-end;
}

.justify-content-space-between {
    justify-content: space-between;
}

.justify-content-center {
    justify-content: center;
}

.margin-left-auto {
    margin-left: auto;
}

.margin-right-auto {
    margin-right: auto;
}

.offwhite-outline {
    outline: 1px solid var(--off-white)
}

.orange-outline {
    outline: 1px solid var(--sonic-blue);
}

.text-color-off-white {
    color: var(--off-white);
    
}

.text-color-sonic-blue {
    color: var(--sonic-blue);
}

.text-align-left {
    text-align: left;
}

.text-align-right {
    text-align: right;
}

.text-align-center {
    text-align: center;
}

.logo {
    font-weight: 600;
    font-size: 1.4rem;
    margin-left: 0.3rem;
}

header {
    position: fixed;
    width: 100%;
    padding: 1rem 10%;
    border-bottom: 2px solid var(--sonic-blue);
}

.navBar {
    margin-right: -2.5rem;
}

.navLinks {
    list-style: none;
}

.navLinks[data-visible="true"] {
    transform: translateX(0%);
}

.navLinks li {
    display: inline-block;
    padding: 0 1.5rem;
    list-style: none;
}

.navLinks li a:hover {
    transition: all 0.5 ease 0s;
}

li a, 
.wrapper p {
    color: var(--off-white);
}

.navLinks li a:hover {
    color: var(--sonic-blue);
}

h2 {
    /* title of project */ 
    font-weight: 600;
    font-size: 2rem;
}

h3 {
    /* tech used in project */ 
    font-size: 1rem;
}

li, a {
    font-size: 1.3rem;
    text-decoration: none;
}

.wrapper {
    padding: 2.5% 10%;
}

/* Hero Section */
.hero-section-margin-block{
    margin-block: 7.5rem;
    /* outline: 1px solid red; */
}

.my-name {
    font-size: 3.25rem;
}

.job-position {
    /* job position */
    font-size: 1.3rem;
    /* outline: 1px solid red; */
}

.hero-section-hyperlinks img {
    margin-top: 0.5rem;
    max-width: 45px;
    /* outline: 1px solid red; */
}

.hero-section-hyperlinks img:hover {
    background-color: var(--sonic-blue);
    /* outline: 1px solid red; */
}

/* about section */
.about-section-text {
    margin-bottom: 2rem;
    /* outline: 1px solid red; */
}

.about-section-text p {
    font-size: 1.125rem;
    margin-bottom: 0.3rem;
}

/* Skills Section */
.skills {
    margin-bottom: 2rem;
    /* outline: 1px solid red; */
}

.grid-container {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
    /* outline: 1px solid red; */
}

.grid-item {
    padding: 1rem;
    margin: 0.3em;
    outline: 1px solid var(--sonic-blue)
 }

.grid-item svg {
    width: 1em;
    height: 1em;
}

.svg-img-size {
    font-size: 3rem;
    line-height: 3rem;
}

.svg-font-size{ 
    font-size: 1rem;
 }

/* Projects Section */
.projects {
    border-bottom: 2px solid var(--sonic-blue);
    /* outline: 1px solid red; */
}

.project-item {
    margin-top: 0.5rem;
    margin-bottom: 1rem;
    padding: 1rem;
    outline: 1px solid var(--sonic-blue)
}

.project-description{
    font-size: 1.125rem;
}

.project-description a {
    font-size: 1.125rem;
}

.project-hyperlinks a {
    margin-left: 1rem;
  
}

.project-hyperlinks a p {
    background-color: var(--sonic-blue);
    color: var(--dark-blue); 
    margin-top: 1rem;
    font-size: 1.1rem;
    padding: 0.5rem;
}

/* quotation section */
.quotation {
    margin: 2% 22%;
    /* outline: 1px solid red; */
}

.quotation p {
    font-size: 1rem;
}

.quotation b {
    margin-top: 1rem;
    font-size: 1rem;
}

/* footer section */
.footer {
    margin: 3% 15%;
    margin-bottom: 1rem;
    font-size: 0.75rem;
    /* outline: 1px solid red; */
}

/* mobile toggle button*/
.toggleButton {
    display: none;
    position: absolute;
    top: 0.9rem;
    right: 1rem;
    width: 2.5rem;
    height: 1.8rem;
    border: 0;
    /* outline: 1px solid red; */
}

@media (min-width: 590px) and (max-width: 971px) {
    
    * {
         scroll-padding-top: 4.5em;
     }

     .toggleButton {
        display: flex;
        z-index: 9999;
        margin-top: clamp(0rem, -1.161rem + 3.15vw, 0.75rem);
        margin-right: clamp(1.25rem, -1.654rem + 7.874vw, 3.125rem);
    }

    .navLinks {
        position: fixed;
        inset: 0 0 0 65%;
        display: flex;
        padding: min(15vh, 10rem) 1rem;
        flex-direction: column;
        transform: translateX(100%);
        transition: transform 150ms ease-out;
        border-left: 1px solid var(--sonic-blue);
    }

    .navLinks li {
        padding-bottom: 1.25rem;
        text-align: right;
    }

    .about-section-text p {
        margin-bottom: 1rem;
    }

    header {
        padding: 2.5% 7.5%;
    }
 
    .wrapper {
        padding: 5% 7.5%;
    }

    .my-name {
        font-size: clamp(3rem, 2.5462rem + 1.2308vw, 3.2rem);
    }

    .hero-section-hyperlinks img {
        margin-top: 0.5rem;
        max-width: 40px;
    }

    /* projects section */
    .project-item {
        padding: 0.5rem;
    }

    /* h2=title of project h3=tech used*/
    h2, 
    h3 { 
        text-align: center;
    }

    .project-hyperlinks {
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        margin-left: -1rem;
    }

    .project-hyperlinks a p{
        margin-bottom: 1px;
        text-align: center;
    }

    /* quotation section */
    .quotation {
        margin: 2% 0;
        /* outline: 1px solid red; */
    }

    /* footer section */
    .footer {
        margin: 3% 10%;
    }
 
 } 

@media (min-width: 442px) and (max-width: 589px) {

    * {
        scroll-padding-top: 4.5em;
    }

    .toggleButton {
        display: flex;
        z-index: 9999;
        margin-right: clamp(0.688rem, -1.38rem + 7.483vw, 1.375rem);
    }

    .navLinks {
        position: fixed;
        inset: 0 0 0 60%;
        display: flex;
        padding: min(15vh, 10rem) 1rem;
        flex-direction: column;
        transform: translateX(100%);
        transition: transform 150ms ease-out;
        border-left: 1px solid var(--sonic-blue);
    }

    .navLinks li {
        padding-bottom: 1.25rem;
        text-align: right;
    }

    header {
        padding: 2.5% 7.5%;
    }

    .wrapper {
        padding: 10% 7.5%;
    }
    
    .my-name {
        font-size: clamp(2.5rem, 0.9966rem + 5.4422vw, 3rem);
    }
    
    .job-position {
        font-size: clamp(1rem, 0.3986rem + 2.1769vw, 1.2rem);
        /* outline: 1px solid red; */
    }
    
    .hero-section-hyperlinks img {
        margin-top: 0.5rem;
        max-width: 40px;
    }

    /* about section */
    .about-section-text p {
        font-size: clamp(1rem, 0.6993rem + 1.0884vw, 1.1rem);
        margin-bottom: 1rem;
    }

    /* skills section */
    .grid-container {
        grid-template-columns: repeat(auto-fill, minmax(125px, 1fr));
    }

    /* projects section */
    .project-item {
        padding: 0.5rem;
    }

    /* title of project */
    h2 { 
        font-size: clamp(2rem, 0.7973rem + 4.3537vw, 2.4rem);
        text-align: center;
    }

    /* tech used*/
    h3 {
        font-size: clamp(1rem, 0.8497rem + 0.5442vw, 1.05rem);
        text-align: center;
    }
    
    .project-description {
        font-size: clamp(1rem, 0.6993rem + 1.0884vw, 1.1rem);
        margin-bottom: 1rem;
    }
    
    .project-description a {
        font-size: clamp(1rem, 0.6993rem + 1.0884vw, 1.1rem);
    }

    .project-hyperlinks {
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        margin-left: -1rem;
    }

    .project-hyperlinks a p{
        font-size: clamp(1rem, 0.6993rem + 1.0884vw, 1.1rem);
        padding: 1rem;
        margin-bottom: 1px;
        text-align: center;
    }

    /* quotation section */
    .quotation {
        margin: 2% 0;
        /* outline: 1px solid red; */
    }

} 

@media (min-width: 320px) and (max-width: 441px) {

    * {
        scroll-padding-top: 3.5em;
    }

    .toggleButton {
        display: flex;
        z-index: 9999;
        margin-top: -2.5px;
        margin-right: clamp(0rem, -1.653rem + 8.264vw, 0.625rem);
    }

    .navLinks {
        position: fixed;
        inset: 0 0 0 50%;
        display: flex;
        padding: min(15vh, 10rem) 1rem;
        flex-direction: column;
        transform: translateX(100%);
        transition: transform 150ms ease-out;
        border-left: 1px solid var(--sonic-blue);
    }

    .navLinks li {
        padding-bottom: 1.25rem;
        text-align: right;
    }

    header {
        padding: 2.5% 7.5%;
    }

    .wrapper {
        padding: 15% 7.5%;
    }
    
    /* hero section */
    .my-name {
        font-size: clamp(1.7rem, -0.4157rem + 10.5785vw, 2.5rem);
    }
    
    .job-position {
        font-size: clamp(0.85rem, 0.4566rem + 1.9672vw, 1rem);
        /* outline: 1px solid red; */
    }
    
    .hero-section-hyperlinks img {
        margin-top: 0.5rem;
        max-width: 40px;
    }

    /* about section */
    .about-section-text p {
        font-size: clamp(0.9rem, 0.6377rem + 1.3115vw, 1rem);
        margin-bottom: 0.5rem;
    }

    /* skills section */
    .grid-container {
        grid-template-columns: repeat(auto-fill, minmax(125px, 1fr));
    }

    /* projects section */
    .project-item {
        padding: 0.5rem;
    }


    /* title of project */
    h2 { 
        font-size: clamp(1.4rem, -0.1738rem + 7.8689vw, 2rem);
        text-align: center;
    }

    /* tech used*/
    h3 {
        font-size: clamp(0.9rem, 0.6377rem + 1.3115vw, 1rem);
        text-align: center;
    }
    
    .project-description {
        font-size: clamp(0.9rem, 0.6377rem + 1.3115vw, 1rem);
        margin-bottom: 1rem;
        margin-inline: 0.1rem;
    }
    
    .project-description a {
        font-size: clamp(0.9rem, 0.6377rem + 1.3115vw, 1rem);
    }
    .project-hyperlinks {
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        margin-left: -1rem;
    }

    .project-hyperlinks a p{
        font-size: clamp(0.9rem, 0.6377rem + 1.3115vw, 1rem);
        padding: 1rem;
        margin-bottom: 0.1rem;
        margin-inline: 0.1rem;
        text-align: center;
    }

    /* quotation section */
    .quotation {
        margin: 2% 0;
        /* outline: 1px solid red; */
    }

    .quotation p {
        font-size: clamp(0.9rem, 0.6377rem + 1.3115vw, 1rem);
    }

    .quotation b {
        font-size: clamp(0.9rem, 0.6377rem + 1.3115vw, 1rem);
        margin-top: 1rem;
    }

} 

